--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "icewrap",
-  "version": "0.0.1",
+  "version": "3.0.8",
   "description": "wraps icebear",
   "main": "index.js",
   "types": "index.d.ts",
@@ -9,7 +9,7 @@
     "url": "git+https://github.com/lostfictions/icewrap.git"
   },
   "scripts": {
-    "postinstall": "echo \"Building Icebear...\" && babel -q node_modules/peerio-icebear/src -d dist"
+    "postinstall": "echo \"Building Icebear...\" && echo `pwd` && babel -q ../peerio-icebear/src -d dist --plugins=transform-decorators-legacy,transform-class-properties,transform-es2015-modules-commonjs,transform-export-extensions,transform-object-rest-spread"
   },
   "author": "s",
   "license": "ISC",
