attempt to fix building icebear

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "node repl.js",
-    "postinstall": "echo \"Building Icebear...\" && echo `pwd` && babel -q ../peerio-icebear/src -d ../peerio-icebear/dist --plugins=transform-decorators-legacy,transform-class-properties,transform-es2015-modules-commonjs,transform-export-extensions,transform-object-rest-spread"
+    "postinstall": "node build.js"
   },
   "author": "s",
   "license": "ISC",
